LPS-67021 - Multiple spacing issues and dead code

--- a/modules/apps/foundation/frontend-theme/frontend-theme-westeros-bank/src/css/partials/_modules.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-westeros-bank/src/css/partials/_modules.scss
@@ -77,7 +77,7 @@
 
 .secondary-background-color {
 	background-color: $brand-bg-color-3;
-	padding: 0 0 30px ;
+	padding: 0 0 30px;
 }
 
 .upper-modules {
@@ -131,15 +131,15 @@
 		font-size: 10px;
 		opacity: 0.5;
 
-			@include media-query(sm, $screen-sm-max) {
-				margin-bottom: 30px;
-			}
-
-			@include media-query($breakpoint_tablet, null) {
-				font-size: 12px;
-				margin-bottom: 80px;
-			}
+		@include media-query(sm, $screen-sm-max) {
+			margin-bottom: 30px;
 		}
+
+		@include media-query($breakpoint_tablet, null) {
+			font-size: 12px;
+			margin-bottom: 80px;
+		}
+	}
 
 	.lead {
 		margin-bottom: 30px;
@@ -155,10 +155,10 @@
 		.image {
 			padding: 0;
 
-				img {
-					height: auto;
-					width: 100%;
-				}
+			img {
+				height: auto;
+				width: 100%;
+			}
 		}
 	}
 
@@ -167,13 +167,13 @@
 	}
 }
 
-.narrow-module, .col-sm-6.image, .bottom-modules .col-md-4  {
+.narrow-module, .col-sm-6.image, .bottom-modules .col-md-4 {
 	img.img-responsive {
 		width: 100%;
 	}
 }
 
-.tertiary-background-color  {
+.tertiary-background-color {
 	background-color: $brand-bg-color-4;
 	padding: 30px 0;
 
@@ -288,7 +288,7 @@
 			padding: 10px 0;
 			position: relative;
 
-			&::before {
+			&:before {
 				border-right: 1px solid #5EA7CB;
 				content: " ";
 				display: block;
@@ -302,8 +302,6 @@
 	}
 
 	#footer-modules .col-sm-6 {
-		/*display: table;
-		width: 100%;*/
 		margin-bottom: 30px;
 
 		@include media-query($breakpoint_tablet, null) {
